[gd_scene load_steps=3 format=3 uid="uid://20ocomkmuthb"]

[ext_resource type="Script" uid="uid://c1sg0tby256mi" path="res://scripts/dialogue_runner.gd" id="1_rc1id"]
[ext_resource type="FontFile" uid="uid://d3xyw82rfym72" path="res://fonts/VT323-Regular.ttf" id="2_fu8b5"]

[node name="DialogueBox" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rc1id")
metadata/_edit_lock_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 51.0
offset_top = 211.0
offset_right = 668.0
offset_bottom = 480.0
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
metadata/_edit_lock_ = true

[node name="Speaker" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "玩家："
metadata/_edit_lock_ = true

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_vertical = 3

[node name="SpeakText" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_fu8b5")
text = "这是玩家的对话内容"

[node name="Choices" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ClickCatcher" type="Button" parent="PanelContainer"]
layout_mode = 2
flat = true

[connection signal="pressed" from="PanelContainer/ClickCatcher" to="." method="_on_button_pressed"]
